[project]
name = "comfys3"
description = "ComfyS3 seamlessly integrates with [a/Amazon S3](https://aws.amazon.com/en/s3/) in ComfyUI. This open-source project provides custom nodes for effortless loading and saving of images, videos, and checkpoint models directly from S3 buckets within the ComfyUI graph interface."
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = ["python-dotenv==1.0.1", "boto3==1.34.32"]

[project.urls]
Repository = "https://github.com/TemryL/ComfyS3"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "temryl"
DisplayName = "ComfyS3"
Icon = ""
